# agent-sandbox

./: .gitignore  README.md  TODO.md
as-guestd/: go.mod  go.sum
as-guestd/cmd/as-guestd/: main.go
as-guestd/exec/: runner.go
as-guestd/fileshare/: mount.go
as-guestd/log/: logger.go
as-guestd/mount/: mounter.go
as-guestd/rpc/: conn.go  conn_test.go
as-guestd/tap/: bridge.go
as-hostd/: go.mod  go.sum
as-hostd/cmd/as-hostd/: main.go
as-hostd/fileguard/: store.go  store_test.go
as-hostd/fileshare/: qid_unix.go  qid_windows.go  server.go  server_integration_test.go  server_test.go
as-hostd/netstack/: service.go
as-hostd/rpc/: conn.go  stdio.go
as-hostd/vm/: backend.go
as-hostd/vm/avf/: avf_darwin.go  avf_darwin_nocgo.go  avf_stub.go  bridge_darwin.h  bridge_darwin.m
as-hostd/vm/hcs/: hcs.go  stub.go
docs/: design.md  error-recovery.md  file-guard.md  file-sharing.md
images/: Dockerfile  build-guestpack-mac.sh  build-guestpack-wsl.sh  build-mac.sh  build-wsl.sh
images/etc/: fstab
images/openrc/: as-guestd.initd  vm-agent.initd
poc/9p-bench/: README.md  bench.sh
sandboxd/: go.mod
sandboxd/netstack/: service.go
sandboxd/rpc/: conn_test.go  stdio.go
sdk/: pyproject.toml
sdk/sandbox/: __init__.py  _binary.py  _rpc.py  boot.py  build.py  cli.py  environment.py  file_guard.py  network.py  process.py  sandbox.py
tests/: test_e2e.py  test_file_guard_e2e.py  test_rpc.py  test_smoke.py
vm-agent/: go.mod
vm-agent/env/: manager.go  manager_test.go
vm-agent/exec/: runner.go
vm-agent/mount/: mounter.go  mounter_test.go
(+3 files in other folders)
